<resources>
    <string name="app_name">Chatmate</string>
    <string name="main_logo">main logo</string>

    <string name="name">Name</string>
    <string name="email_phone">Email</string>
    <string name="password">Password</string>
    <string name="already_have_account">Already Have Account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>

    <string name="sing_in">sign_in</string>
    <string name="create_a_new_account">Create a new Account</string>
    <string name="setimage">setImage</string>
    <string name="chatmates">Chatmates</string>

    <string name="logout">Logout</string>
    <string name="user_profile">User Profile</string>

    <string name="smsMessage">Chatmate will send SMS to your Phone Number TO Verify Your Number </string>
    <string name="ConTinue">Continue</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="verify_your_phone">Verify Your Phone Number</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="create_new_account">Create New Account !! </string>
    <string name="singin">sing in</string>
    <string name="vikram_rathod">Vikram Rathod</string>
    <string name="tab_to_chat">Tab to chat</string>
    <string name="android_studio">Android studio</string>
    <string name="calls">Phone</string>
    <string name="details">Profile Details</string>
    <string name="Video">Videos</string>
    <string name="type_here_message">Type here message</string>
    <string name="message_send">message send</string>
    <string name="sign_up_with_phone">Sign Up with Phone</string>
    <string name="add_new">Add new</string>
    <string name="to_got_main_activity">To got main activity</string>
    <string name="vikram">Vikram</string>
    <string name="add_user">Add User</string>
    <string name="developer_profile">Developer Profile</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="hello">Hello !</string>
    <string name="register">REGISTER</string>
    <string name="welcome_back">Welcome Back !</string>
    <string name="log_in">LOG IN</string>
    <string name="email">Email</string>
    <string name="passwordl">Password</string>
    <string name="sign_in">sign in</string>


    <string name="profile">Developers Profile</string>
    <string name="web_developement">Web Development</string>
    <string name="android_developement">Android Development</string>
    <string name="java_developement">Java Development</string>
    <string name="skills">Skills</string>



    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_amp_condition"><![CDATA[Terms & Condition]]></string>


    <string name="accept_terms">I accept the <a href="https://procodehelp.blogspot.com/p/terms-and-conditions-chatmate.html">terms and conditon</a> and \ni have read the <a href="https://procodehelp.blogspot.com/p/privacy-policy-chatmate.html">privacy policy</a>.</string>
    <string name="todo">TODO</string>
    <string name="update_details">Update Details</string>
</resources>