<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    >
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/icon_search"
        app:showAsAction="collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:title="Search"
        tools:ignore="HardcodedText" />

    <item
        android:id="@+id/setting"
        android:title="@string/user_profile" />
    <item
        android:id="@+id/logout"
        android:title="@string/logout" />

    <item android:id="@+id/share"
        android:title="@string/share"
        />
    <item android:id="@+id/developer"
        android:title="@string/developer_profile"
        />
    <item android:id="@+id/privacy"
        android:title="@string/privacy_policy"
        />
    <item android:id="@+id/term"
        android:title="@string/terms_amp_condition"
        />




</menu>