<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bk"
    android:backgroundTintMode="src_over"
    android:gravity="center"

    android:orientation="vertical"
    tools:context=".Activities.LoginPage">

    <LinearLayout
        android:id="@+id/card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative"
        android:layout_marginStart="5dp"
        android:layout_marginTop="100dp"
        android:background="@color/white"
        android:orientation="vertical"
        tools:ignore="NotSibling">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_black_italic"
            android:text="@string/welcome_back"
            android:textColor="@color/lightblue"
            android:textSize="18sp">

        </TextView>

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto_black_italic"
            android:text="@string/log_in"
            android:textColor="@color/blue"
            android:textSize="45sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"


        android:layout_height="wrap_content"
        android:layout_below="@id/card"
        android:layout_marginStart="10dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"

        android:orientation="vertical"
        android:padding="10dp">

        <!--                <ImageView-->
        <!--                    android:id="@+id/logo"-->
        <!--                    android:layout_width="100dp"-->
        <!--                    android:layout_height="100dp"-->
        <!--                    android:layout_gravity="center_horizontal"-->
        <!--                    android:layout_marginTop="15dp"-->
        <!--                    android:contentDescription="@string/main_logo"-->
        <!--                    app:srcCompat="@drawable/ic__0830632741582956833" />-->


        <!--        Email Address-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:boxBackgroundColor="@color/red"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:startIconDrawable="@drawable/email_ic">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailIdLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/email"

                android:inputType="textEmailAddress"
                android:minHeight="48dp">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <!--        password -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"

            app:endIconMode="password_toggle"


            app:startIconDrawable="@drawable/lock"
            tools:ignore="ExtraText">

            >


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userPassLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/white"
                android:hint="@string/passwordl"

                android:inputType="textPassword">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/signText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="5dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/create_new_account"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/forgotPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:onClick="forgotPassword"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/forgot_password"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="UsingOnClickInXml" />

        </RelativeLayout>


        <Button
            android:id="@+id/LoginBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/yellow"
            android:padding="10dp"
            android:text="@string/sign_in"
            android:textColor="@color/white"

            android:textSize="14sp"
            app:cornerRadius="10dp" />



    </LinearLayout>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="90dp"
        android:adjustViewBounds="false"
        android:onClick="RegisterPageSlider"
        android:src="@drawable/ic_add_img"
        tools:ignore="UsingOnClickInXml" />

</RelativeLayout>