<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.PhoneNumber">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:src="@drawable/otp_verify"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"

        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/verify_your_phone"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal"
        android:text="@string/smsMessage"
        app:layout_constraintEnd_toEndOf="@+id/Verify"
        app:layout_constraintStart_toStartOf="@+id/Verify"
        app:layout_constraintTop_toBottomOf="@+id/Verify"
         />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.108">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/PhoneBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@drawable/textbox_outline"
                android:ems="10"
                android:hint="@string/enter_phone_number"
                android:inputType="phone"
                android:minHeight="48dp"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/Continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:backgroundTint="@color/green"
                android:padding="8dp"

                android:text="@string/ConTinue"
                app:cornerRadius="8dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>