<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitee"
    tools:context=".Activities.ChatActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:id="@+id/appBarchat"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bgLogin"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            tools:ignore="InvalidId">

            <ImageView
                android:id="@+id/backArrow"
                android:layout_width="30dp"
                android:layout_height="35dp"
                android:contentDescription="@string/to_got_main_activity"
                android:onClick="GoingBackToMainActivity"
                android:src="@drawable/arrow_back"

                tools:ignore="ImageContrastCheck,UsingOnClickInXml" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/user"
                    app:civ_border_color="@color/white"
                    app:civ_border_overlay="true"


                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="208dp"
                    android:layout_height="48dp"

                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/profile_image"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/userName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@string/vikram"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/online"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="2dp"
                        android:layout_weight="1"
                        android:text="online"
                        android:visibility="gone"
                        tools:ignore="HardcodedText" />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chatRecycler2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/cardView"
        android:layout_below="@+id/appBarchat"
        android:layout_marginBottom="5dp"
        android:background="@color/whitee"
        android:visibility="visible">


    </androidx.recyclerview.widget.RecyclerView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="8dp"
        android:layout_toStartOf="@id/constraint"
        android:layout_marginBottom="10dp"
        android:background="@color/whitee"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp">

        <EditText
            android:id="@+id/chatText"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="0dp"
            android:autofillHints="Type here message"
            android:background="@color/white"
            android:gravity="top|start"
            android:hint="@string/type_here_message"
            android:inputType="textMultiLine"
            android:maxWidth="18dp"
            android:maxHeight="105dp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="#757575"
            tools:ignore="TouchTargetSizeCheck" />

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true">

        <ImageView
            android:id="@+id/attachFile"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/attachment"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/sendBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/sendBtn"
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/message_send"
            android:src="@drawable/send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>